deploy: ea51f4ca572b7bf8dddcccc9982be680bf744787

--- a/genindex.html
+++ b/genindex.html
@@ -607,56 +607,28 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.RawMessage">RawMessage (class in qop.daemon)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.converters.Converter.remove_art">remove_art (qop.converters.Converter attribute)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.reset_active_tasks">reset_active_tasks() (qop.tasks.TaskQueue method)</a>
 </li>
-      <li><a href="qop.html#qop.converters.Converter.run">run() (qop.converters.Converter method)</a>
-
-      <ul>
-        <li><a href="qop.html#qop.converters.CopyConverter.run">(qop.converters.CopyConverter method)</a>
-</li>
-        <li><a href="qop.html#qop.converters.Mp3Converter.run">(qop.converters.Mp3Converter method)</a>
-</li>
-        <li><a href="qop.html#qop.converters.OggConverter.run">(qop.converters.OggConverter method)</a>
-</li>
-        <li><a href="qop.html#qop.scanners.BlacklistScanner.run">(qop.scanners.BlacklistScanner method)</a>
-</li>
-        <li><a href="qop.html#qop.scanners.PassScanner.run">(qop.scanners.PassScanner method)</a>
-</li>
-        <li><a href="qop.html#qop.scanners.Scanner.run">(qop.scanners.Scanner method)</a>
-</li>
-        <li><a href="qop.html#qop.scanners.WhitelistScanner.run">(qop.scanners.WhitelistScanner method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.ConvertTask.run">(qop.tasks.ConvertTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.CopyTask.run">(qop.tasks.CopyTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.DeleteTask.run">(qop.tasks.DeleteTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.EchoTask.run">(qop.tasks.EchoTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.FailTask.run">(qop.tasks.FailTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.FileTask.run">(qop.tasks.FileTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.MoveTask.run">(qop.tasks.MoveTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.SimpleConvertTask.run">(qop.tasks.SimpleConvertTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.SleepTask.run">(qop.tasks.SleepTask method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.Task.run">(qop.tasks.Task method)</a>
-</li>
-        <li><a href="qop.html#qop.tasks.TaskQueue.run">(qop.tasks.TaskQueue method)</a>
-</li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.scanners.BlacklistScanner.scan">scan() (qop.scanners.BlacklistScanner method)</a>
+
+      <ul>
+        <li><a href="qop.html#qop.scanners.PassScanner.scan">(qop.scanners.PassScanner method)</a>
+</li>
+        <li><a href="qop.html#qop.scanners.Scanner.scan">(qop.scanners.Scanner method)</a>
+</li>
+        <li><a href="qop.html#qop.scanners.WhitelistScanner.scan">(qop.scanners.WhitelistScanner method)</a>
+</li>
+      </ul></li>
       <li><a href="qop.html#qop.scanners.Scanner">Scanner (class in qop.scanners)</a>
 </li>
       <li><a href="qop.html#qop.daemon.QopClient.send_command">send_command() (qop.daemon.QopClient method)</a>
@@ -669,12 +641,44 @@
 </li>
       <li><a href="qop.html#qop.constants.TaskType.SLEEP">SLEEP (qop.constants.TaskType attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.tasks.SleepTask">SleepTask (class in qop.tasks)</a>
 </li>
       <li><a href="qop.html#qop.tasks.ConvertTask.spawn">spawn() (qop.tasks.ConvertTask method)</a>
 </li>
+      <li><a href="qop.html#qop.converters.Converter.start">start() (qop.converters.Converter method)</a>
+
+      <ul>
+        <li><a href="qop.html#qop.converters.CopyConverter.start">(qop.converters.CopyConverter method)</a>
+</li>
+        <li><a href="qop.html#qop.converters.Mp3Converter.start">(qop.converters.Mp3Converter method)</a>
+</li>
+        <li><a href="qop.html#qop.converters.OggConverter.start">(qop.converters.OggConverter method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.ConvertTask.start">(qop.tasks.ConvertTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.CopyTask.start">(qop.tasks.CopyTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.DeleteTask.start">(qop.tasks.DeleteTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.EchoTask.start">(qop.tasks.EchoTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.FailTask.start">(qop.tasks.FailTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.FileTask.start">(qop.tasks.FileTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.MoveTask.start">(qop.tasks.MoveTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.SimpleConvertTask.start">(qop.tasks.SimpleConvertTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.SleepTask.start">(qop.tasks.SleepTask method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.Task.start">(qop.tasks.Task method)</a>
+</li>
+        <li><a href="qop.html#qop.tasks.TaskQueue.start">(qop.tasks.TaskQueue method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.QopDaemon.stats">stats (qop.daemon.QopDaemon attribute)</a>
 </li>
       <li><a href="qop.html#qop.constants.Status">Status (class in qop.constants)</a>
