deploy: d0c17352880bb3d30548d7ea9480211704aa01b6

--- a/genindex.html
+++ b/genindex.html
@@ -301,6 +301,8 @@
         <li><a href="qop.html#qop.daemon.RawMessage.encode">(qop.daemon.RawMessage method)</a>
 </li>
       </ul></li>
+      <li><a href="qop.html#qop.converters.PydubConverter.ext">ext() (qop.converters.PydubConverter property)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -438,10 +440,6 @@
 </li>
       <li><a href="qop.html#qop.tasks.MoveTask">MoveTask (class in qop.tasks)</a>
 </li>
-      <li><a href="qop.html#qop.constants.ConverterType.MP3">MP3 (qop.constants.ConverterType attribute)</a>
-</li>
-      <li><a href="qop.html#qop.converters.Mp3Converter">Mp3Converter (class in qop.converters)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -470,14 +468,10 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.constants.ConverterType.OGG">OGG (qop.constants.ConverterType attribute)</a>
-</li>
-      <li><a href="qop.html#qop.converters.OggConverter">OggConverter (class in qop.converters)</a>
+      <li><a href="qop.html#qop.tasks.Task.oid">oid (qop.tasks.Task attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.tasks.Task.oid">oid (qop.tasks.Task attribute)</a>
-</li>
       <li><a href="qop.html#qop.constants.Status.OK">OK (qop.constants.Status attribute)</a>
 </li>
   </ul></td>
@@ -496,10 +490,10 @@
 </li>
       <li><a href="qop.html#qop.constants.Status.PENDING">PENDING (qop.constants.Status attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.tasks.TaskQueue.pop">pop() (qop.tasks.TaskQueue method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.QopDaemon.port">port (qop.daemon.QopDaemon attribute)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.print">print() (qop.tasks.TaskQueue method)</a>
@@ -509,6 +503,10 @@
       <li><a href="qop.html#qop.tasks.TaskQueue.progress">progress() (qop.tasks.TaskQueue method)</a>
 </li>
       <li><a href="qop.html#qop.tasks.TaskQueue.put">put() (qop.tasks.TaskQueue method)</a>
+</li>
+      <li><a href="qop.html#qop.constants.ConverterType.PYDUB">PYDUB (qop.constants.ConverterType attribute)</a>
+</li>
+      <li><a href="qop.html#qop.converters.PydubConverter">PydubConverter (class in qop.converters)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -650,9 +648,7 @@
       <ul>
         <li><a href="qop.html#qop.converters.CopyConverter.start">(qop.converters.CopyConverter method)</a>
 </li>
-        <li><a href="qop.html#qop.converters.Mp3Converter.start">(qop.converters.Mp3Converter method)</a>
-</li>
-        <li><a href="qop.html#qop.converters.OggConverter.start">(qop.converters.OggConverter method)</a>
+        <li><a href="qop.html#qop.converters.PydubConverter.start">(qop.converters.PydubConverter method)</a>
 </li>
         <li><a href="qop.html#qop.tasks.ConvertTask.start">(qop.tasks.ConvertTask method)</a>
 </li>
@@ -714,9 +710,7 @@
       <ul>
         <li><a href="qop.html#qop.converters.CopyConverter.to_dict">(qop.converters.CopyConverter method)</a>
 </li>
-        <li><a href="qop.html#qop.converters.Mp3Converter.to_dict">(qop.converters.Mp3Converter method)</a>
-</li>
-        <li><a href="qop.html#qop.converters.OggConverter.to_dict">(qop.converters.OggConverter method)</a>
+        <li><a href="qop.html#qop.converters.PydubConverter.to_dict">(qop.converters.PydubConverter method)</a>
 </li>
         <li><a href="qop.html#qop.tasks.ConvertTask.to_dict">(qop.tasks.ConvertTask method)</a>
 </li>
