deploy: 3800c4be69385a89419c3b395ed9e851f2266557

--- a/genindex.html
+++ b/genindex.html
@@ -171,7 +171,6 @@
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
- | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -196,10 +195,6 @@
 
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.scanners.BlacklistScanner">BlacklistScanner (class in qop.scanners)</a>
-</li>
-  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.RawMessage.body">body() (qop.daemon.RawMessage property)</a>
 </li>
@@ -293,14 +288,16 @@
 </li>
       <li><a href="qop.html#qop.tasks.EchoTask">EchoTask (class in qop.tasks)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.Message.encode">encode() (qop.daemon.Message method)</a>
 
       <ul>
         <li><a href="qop.html#qop.daemon.RawMessage.encode">(qop.daemon.RawMessage method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.scanners.ExcludeScanner">ExcludeScanner (class in qop.scanners)</a>
+</li>
       <li><a href="qop.html#qop.converters.PydubConverter.ext">ext() (qop.converters.PydubConverter property)</a>
 </li>
   </ul></td>
@@ -387,12 +384,14 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.tasks.TaskQueue.is_active">is_active() (qop.tasks.TaskQueue method)</a>
+      <li><a href="qop.html#qop.scanners.IncludeScanner">IncludeScanner (class in qop.scanners)</a>
 </li>
-      <li><a href="qop.html#qop.daemon.QopClient.is_daemon_active">is_daemon_active() (qop.daemon.QopClient method)</a>
+      <li><a href="qop.html#qop.tasks.TaskQueue.is_active">is_active() (qop.tasks.TaskQueue method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.daemon.QopClient.is_daemon_active">is_daemon_active() (qop.daemon.QopClient method)</a>
+</li>
       <li><a href="qop.html#qop.daemon.QopDaemon.is_listening">is_listening() (qop.daemon.QopDaemon property)</a>
 </li>
       <li><a href="qop.html#qop.daemon.QopClient.is_queue_active">is_queue_active() (qop.daemon.QopClient method)</a>
@@ -617,14 +616,14 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.scanners.BlacklistScanner.scan">scan() (qop.scanners.BlacklistScanner method)</a>
+      <li><a href="qop.html#qop.scanners.ExcludeScanner.scan">scan() (qop.scanners.ExcludeScanner method)</a>
 
       <ul>
+        <li><a href="qop.html#qop.scanners.IncludeScanner.scan">(qop.scanners.IncludeScanner method)</a>
+</li>
         <li><a href="qop.html#qop.scanners.PassScanner.scan">(qop.scanners.PassScanner method)</a>
 </li>
         <li><a href="qop.html#qop.scanners.Scanner.scan">(qop.scanners.Scanner method)</a>
-</li>
-        <li><a href="qop.html#qop.scanners.WhitelistScanner.scan">(qop.scanners.WhitelistScanner method)</a>
 </li>
       </ul></li>
       <li><a href="qop.html#qop.scanners.Scanner">Scanner (class in qop.scanners)</a>
@@ -744,14 +743,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.constants.PayloadClass.VALUE">VALUE (qop.constants.PayloadClass attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="W">W</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.scanners.WhitelistScanner">WhitelistScanner (class in qop.scanners)</a>
 </li>
   </ul></td>
 </tr></table>
