deploy: 851e0afb180bcf8ec8137f94a421997aa4af8235

--- a/genindex.html
+++ b/genindex.html
@@ -152,7 +152,6 @@
 
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
- | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
@@ -189,14 +188,6 @@
       <li><a href="qop.html#qop.daemon.QopClient.active_tasks">active_tasks() (qop.daemon.QopClient property)</a>
 </li>
       <li><a href="qop.html#qop.exceptions.AlreadyUnderEvaluationError">AlreadyUnderEvaluationError</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="B">B</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.daemon.RawMessage.body">body() (qop.daemon.RawMessage property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -264,19 +255,15 @@
       </ul></li>
       <li><a href="qop.html#qop.constants.Command.DAEMON_IS_ACTIVE">DAEMON_IS_ACTIVE (qop.constants.Command attribute)</a>
 </li>
-      <li><a href="qop.html#qop.constants.Command.DAEMON_START">DAEMON_START (qop.constants.Command attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.constants.Command.DAEMON_STOP">DAEMON_STOP (qop.constants.Command attribute)</a>
+      <li><a href="qop.html#qop.constants.Command.DAEMON_START">DAEMON_START (qop.constants.Command attribute)</a>
 </li>
-      <li><a href="qop.html#qop.daemon.RawMessage.decode">decode() (qop.daemon.RawMessage method)</a>
+      <li><a href="qop.html#qop.constants.Command.DAEMON_STOP">DAEMON_STOP (qop.constants.Command attribute)</a>
 </li>
       <li><a href="qop.html#qop.constants.TaskType.DELETE">DELETE (qop.constants.TaskType attribute)</a>
 </li>
       <li><a href="qop.html#qop.tasks.DeleteTask">DeleteTask (class in qop.tasks)</a>
-</li>
-      <li><a href="qop.html#qop.converters.Converter.do_remove_art">do_remove_art() (qop.converters.Converter method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -288,14 +275,10 @@
 </li>
       <li><a href="qop.html#qop.tasks.EchoTask">EchoTask (class in qop.tasks)</a>
 </li>
-      <li><a href="qop.html#qop.daemon.Message.encode">encode() (qop.daemon.Message method)</a>
-
-      <ul>
-        <li><a href="qop.html#qop.daemon.RawMessage.encode">(qop.daemon.RawMessage method)</a>
-</li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="qop.html#qop.daemon.Message.encode">encode() (qop.daemon.Message method)</a>
+</li>
       <li><a href="qop.html#qop.scanners.ExcludeScanner">ExcludeScanner (class in qop.scanners)</a>
 </li>
       <li><a href="qop.html#qop.converters.PydubConverter.ext">ext() (qop.converters.PydubConverter property)</a>
@@ -338,6 +321,8 @@
 </li>
       <li><a href="qop.html#qop.tasks.QueueProgress.fmt_summary">fmt_summary() (qop.tasks.QueueProgress method)</a>
 </li>
+      <li><a href="qop.html#qop.daemon.Message.from_bytes">from_bytes() (qop.daemon.Message static method)</a>
+</li>
       <li><a href="qop.html#qop.converters.Converter.from_dict">from_dict() (qop.converters.Converter static method)</a>
 
       <ul>
@@ -370,13 +355,9 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.tasks.hammer_commit">hammer_commit() (in module qop.tasks)</a>
 </li>
-      <li><a href="qop.html#qop.daemon.QopDaemon.handle_request">handle_request() (qop.daemon.QopDaemon static method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.daemon.RawMessage.header">header() (qop.daemon.RawMessage property)</a>
-</li>
-      <li><a href="qop.html#qop.daemon.RawMessage.header_len">header_len() (qop.daemon.RawMessage property)</a>
+      <li><a href="qop.html#qop.daemon.QopDaemon.handle_request">handle_request() (qop.daemon.QopDaemon static method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -391,8 +372,6 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="qop.html#qop.daemon.QopClient.is_daemon_active">is_daemon_active() (qop.daemon.QopClient method)</a>
-</li>
-      <li><a href="qop.html#qop.daemon.QopDaemon.is_listening">is_listening() (qop.daemon.QopDaemon property)</a>
 </li>
       <li><a href="qop.html#qop.daemon.QopClient.is_queue_active">is_queue_active() (qop.daemon.QopClient method)</a>
 </li>
@@ -600,12 +579,10 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.daemon.RawMessage">RawMessage (class in qop.daemon)</a>
+      <li><a href="qop.html#qop.converters.Converter.remove_art">remove_art (qop.converters.Converter attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="qop.html#qop.converters.Converter.remove_art">remove_art (qop.converters.Converter attribute)</a>
-</li>
       <li><a href="qop.html#qop.tasks.TaskQueue.reset_active_tasks">reset_active_tasks() (qop.tasks.TaskQueue method)</a>
 </li>
   </ul></td>
